<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/register_account_link" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/cardView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="40dp" android:layout_marginRight="40dp" android:layout_marginBottom="40dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" app:cardBackgroundColor="#88ffffff" app:cardCornerRadius="20dp" app:cardElevation="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.523" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.406">
        <ScrollView android:layout_gravity="center" android:background="#00ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="center" android:id="@+id/person_profile_pic" android:layout_width="206dp" android:layout_height="175dp" android:layout_marginLeft="102dp" android:layout_marginTop="30dp" android:layout_marginRight="100dp" android:src="@drawable/profile" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:foregroundGravity="center" android:layout_marginStart="100dp" android:layout_marginEnd="100dp" android:layout_alignParentStart="true" android:layout_alignParentEnd="true"/>
                <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_profile_full_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/profile_namep" android:layout_below="@+id/person_profile_pic" android:textAllCaps="false" android:textAlignment="center"/>
                <TextView android:textSize="18sp" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_username" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/user_namep" android:layout_below="@+id/person_profile_full_name" android:textAllCaps="false" android:textAlignment="center"/>
                <TextView android:textSize="22sp" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_profile_status" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:text="@string/hey_hii_hiw_are_you_i_am_fine_come_lets_have_an_party" android:layout_below="@+id/person_username" android:textAllCaps="false" android:textAlignment="center"/>
                <TextView android:textSize="18sp" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_country" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/country" android:layout_below="@+id/person_profile_status" android:textAllCaps="false" android:textAlignment="center"/>
                <TextView android:textSize="18sp" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_dob" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/date_of_birth" android:layout_below="@+id/person_country" android:textAllCaps="false" android:textAlignment="center"/>
                <TextView android:textSize="18sp" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_gender" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/gender" android:layout_below="@+id/person_dob" android:textAllCaps="false" android:textAlignment="center"/>
                <TextView android:textSize="18sp" android:textColor="@android:color/background_dark" android:gravity="center_horizontal" android:id="@+id/person_relationship_status" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:layout_marginBottom="40dp" android:text="@string/relationship_status" android:layout_below="@+id/person_dob" android:textAllCaps="false" android:textAlignment="center"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>
