<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/settings_toolbar" layout="@layout/app_bar_layout"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/cardView" android:layout_width="match_parent" android:layout_height="509dp" android:layout_marginTop="90dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" app:cardBackgroundColor="#88ffffff" app:cardCornerRadius="20dp" app:cardElevation="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.523" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.406">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/settings_toolbar" android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
                    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                        <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/settings_profile_image" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="40dp" android:layout_marginBottom="20dp" android:src="@drawable/profile" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_status" android:background="@drawable/inputs" android:padding="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:hint="@string/profile_status" android:layout_below="@+id/settings_profile_image" android:inputType="text"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_username" android:background="@drawable/inputs" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="6dp" android:layout_marginRight="20dp" android:hint="@string/usersname" android:layout_below="@+id/settings_status" android:inputType="text"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_profile_full_name" android:background="@drawable/inputs" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="6dp" android:layout_marginRight="20dp" android:hint="@string/profile_name" android:layout_below="@+id/settings_username" android:inputType="text"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_country" android:background="@drawable/inputs" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="6dp" android:layout_marginRight="20dp" android:hint="@string/country" android:layout_below="@+id/settings_profile_full_name" android:inputType="text"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_dob" android:background="@drawable/inputs" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="6dp" android:layout_marginRight="20dp" android:hint="@string/date_of_birth" android:layout_below="@+id/settings_country" android:inputType="text"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_gender" android:background="@drawable/inputs" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="6dp" android:layout_marginRight="20dp" android:hint="@string/gender" android:layout_below="@+id/settings_dob" android:inputType="text"/>
                        <EditText android:textSize="20sp" android:textColor="@android:color/background_dark" android:gravity="center" android:id="@+id/settings_relationship_status" android:background="@drawable/inputs" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="6dp" android:layout_marginRight="20dp" android:layout_marginBottom="35dp" android:hint="@string/relationship_status" android:layout_below="@+id/settings_gender" android:inputType="text"/>
                    </RelativeLayout>
                </ScrollView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:layout_gravity="center" android:id="@+id/update_acc_settings_buttons" android:background="@drawable/btn_background" android:layout_width="200dp" android:layout_height="58dp" android:layout_marginTop="40dp" android:text="@string/update_settings" android:textAllCaps="false" android:fontFamily="sans-serif-thin"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
