<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="2dp" app:cardCornerRadius="5dp" app:cardElevation="10dp" app:cardUseCompatPadding="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="7dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@android:color/black" android:id="@+id/comment_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username"/>
            <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@android:color/darker_gray" android:id="@+id/simple_text" android:layout_width="wrap_content" android:layout_height="21dp" android:text="@string/commented_on"/>
            <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="end" android:id="@+id/comment_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAlignment="viewEnd"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp">
            <TextView android:textSize="16sp" android:textStyle="bold" android:id="@+id/comment_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment_text_will_display_here"/>
            <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="end" android:id="@+id/comment_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAlignment="viewEnd"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
