<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/cardView" android:layout_width="259dp" android:layout_height="287dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" app:cardBackgroundColor="#88ffffff" app:cardCornerRadius="20dp" app:cardElevation="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.523" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.406">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="40dp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Register" android:fontFamily="sans-serif-thin"/>
            <EditText android:gravity="center" android:layout_gravity="center" android:id="@+id/register_email" android:background="@drawable/inputs" android:padding="10dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginTop="20dp" android:layout_marginRight="30dp" android:hint="@string/register_email" android:ems="10" android:layout_centerHorizontal="true" android:inputType="textEmailAddress"/>
            <EditText android:gravity="center" android:layout_gravity="center" android:id="@+id/register_password" android:background="@drawable/inputs" android:padding="10dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginTop="20dp" android:layout_marginRight="30dp" android:hint="@string/register_password" android:ems="10" android:layout_centerHorizontal="true" android:inputType="textPassword"/>
            <EditText android:gravity="center" android:layout_gravity="center" android:id="@+id/register_conform_password" android:background="@drawable/inputs" android:padding="10dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginTop="20dp" android:layout_marginRight="30dp" android:hint="@string/register_conform_password" android:ems="10" android:layout_centerHorizontal="true" android:inputType="textPassword"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button android:textSize="20sp" android:textColor="#ffffff" android:gravity="center" android:id="@+id/register_create_account" android:background="@drawable/btn_background" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginRight="50dp" android:text="@string/register_create_account" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-light" android:layout_marginStart="50dp" android:layout_marginEnd="50dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.483" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintVertical_bias="0.348"/>
</androidx.constraintlayout.widget.ConstraintLayout>
