<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/update_post_page_toolbar" layout="@layout/app_bar_layout"/>
    <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/cardView" android:layout_width="match_parent" android:layout_height="500dp" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp" android:layout_below="@+id/update_post_page_toolbar" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" app:cardBackgroundColor="#88ffffff" app:cardCornerRadius="30dp" app:cardElevation="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.523" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.406">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageButton android:layout_gravity="center" android:id="@+id/select_post_image" android:background="@drawable/inputs" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="70dp" android:layout_marginBottom="20dp" android:scaleType="center" android:layout_below="@+id/update_post_page_toolbar" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:contentDescription="@string/todo" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" app:srcCompat="@drawable/image_search"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <EditText android:textSize="15dp" android:gravity="center" android:layout_gravity="center" android:id="@+id/post_description" android:background="@drawable/inputs" android:padding="10dp" android:layout_width="match_parent" android:layout_height="0.4in" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginBottom="20dp" android:hint="@string/write_something_about_image_here" android:ems="10" android:layout_below="@+id/select_post_image" android:inputType="textMultiLine" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"/>
    <Button android:textSize="18sp" android:textColor="#ffffff" android:layout_gravity="center" android:id="@+id/update_post_button" android:background="@drawable/button" android:layout_width="200dp" android:layout_height="wrap_content" android:text="@string/update_post" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-light"/>
</LinearLayout>
